# manga-text-detector

./: .gitignore  README.md  benchmark.py  inference.py  pyproject.toml  requirements.txt  train.py  visualize_activations.py
configs/: configurations.py  default.py
data/: atlas.py  background.py  generator.py
docs/: ARCHITECTURE.md
model/: loader.py  network.py
