[project]
name = "text-detection"
version = "0.1.1"
requires-python = "==3.10.*"

dependencies = [
    "jax[cuda12]==0.6.2",
    "jaxlib==0.6.2",
    "jax-cuda12-plugin==0.6.2",

    "flax==0.10.7",
    "optax==0.2.7",
    "numpy==2.2.6",

    "opencv-python==4.13.0.92",
    "Pillow==12.0.0",
    "fonttools==4.62.1",
    "matplotlib==3.10.7",
    "tqdm==4.67.1",
    "scipy==1.15.3",
    "scikit-learn==1.7.2",

    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvcc-cu12==12.8.93",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.3.20",
    "nvidia-nvtx-cu12==12.8.90",
]